--- a/index.html
+++ b/index.html
@@ -476,9 +476,9 @@
     </main>
 
     <footer>
-        <p>Telefoni: (71) 9<span class="erros">9999</span>-<span class="erros">8888</span></p>
-        <p>Email: <span class="erros">camarãu.abestadu@direitu.aquaticu</span></p>
-        <p>© <span class="erros">2023</span> - Todos os <span class="palavras-erradas">direitus</span> <span class="palavras-erradas">reservadus</span> (ou <span class="palavras-erradas">naum</span>)</p>
+        <p>Discord: (@) <span class="erros">@anti_preto</span>-<span class="erros">Advogado. Camarão abestado</span></p>
+        <p>Email: <span class="erros">anti_preto@pronton.me</span></p>
+        <p>© <span class="erros">2025 , 2026</span> - Todos os <span class="palavras-erradas">direitus</span> <span class="palavras-erradas">reservadus</span> (ou <span class="palavras-erradas">naum</span>)</p>
     </footer>
 
     <script>
